# glimmr

./: .gitignore  Cargo.toml  README.md  build.zig  build.zig.zon
src/: main.rs
src/args/: filetypes.rs  mod.rs  themes.rs
src/args/themes/: built_in.rs  custom.rs  mod.rs
src/cli_core/main/: root.zig
src/fs_parser/: fs_structs.rs  mod.rs
src/glimmr/main/: buildCli.zig  main.zig  parseCli.zig
src/glimmr/test/: test.zig
src/transform/: mod.rs
src/util/main/: root.zig
src/util/main/modules/: cli_util.zig  logging.zig
src/visualize/: mod.rs  svg_helper.rs
src/visualize/svg_helper/: addable_container.rs  fonts.rs  mod.rs
